--- a/HW4/Assignment 4 Ximin Hu.html
+++ b/HW4/Assignment 4 Ximin Hu.html
@@ -14823,6 +14823,7 @@ Plot the data, assume that h0 =70 cm, the stage height at which flow stops. This
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>According to the plot, we can see that counting on the H0 change will yield results within the 95% confidence interval. The results suggests that it is safe to use this approach in this study.</p>
+<p>For the uncertainties in the data, we can treat them with different approaches. For instance, we can normalize our data to somehow narrow down or eliminate the uncertainties, also do the data cleaning will help, i.e, to cut off some outliers or abnormal points. The other thing we can do is to count the uncertainties as another variable in our model if possible.</p>
 
 </div>
 </div>
